@@ -582,41 +582,26 @@ void parse_options(int argc, char **argv) {
     {"debug", optional_argument, 0, 'd'},
     {"help", no_argument, 0, 'h'},
     {"iflist", no_argument, 0, 0},
-    {"release_memory", no_argument, 0, 0},
     {"release-memory", no_argument, 0, 0},
     {"nogcc", no_argument, 0, 0},
-    {"max_os_tries", required_argument, 0, 0},
     {"max-os-tries", required_argument, 0, 0},
-    {"max_parallelism", required_argument, 0, 'M'},
     {"max-parallelism", required_argument, 0, 'M'},
-    {"min_parallelism", required_argument, 0, 0},
     {"min-parallelism", required_argument, 0, 0},
     {"timing", required_argument, 0, 'T'},
-    {"max_rtt_timeout", required_argument, 0, 0},
     {"max-rtt-timeout", required_argument, 0, 0},
-    {"min_rtt_timeout", required_argument, 0, 0},
     {"min-rtt-timeout", required_argument, 0, 0},
-    {"initial_rtt_timeout", required_argument, 0, 0},
     {"initial-rtt-timeout", required_argument, 0, 0},
     {"excludefile", required_argument, 0, 0},
     {"exclude", required_argument, 0, 0},
-    {"max_hostgroup", required_argument, 0, 0},
     {"max-hostgroup", required_argument, 0, 0},
-    {"min_hostgroup", required_argument, 0, 0},
     {"min-hostgroup", required_argument, 0, 0},
     {"open", no_argument, 0, 0},
     {"scanflags", required_argument, 0, 0},
-    {"defeat_rst_ratelimit", no_argument, 0, 0},
     {"defeat-rst-ratelimit", no_argument, 0, 0},
-    {"defeat_icmp_ratelimit", no_argument, 0, 0},
     {"defeat-icmp-ratelimit", no_argument, 0, 0},
-    {"host_timeout", required_argument, 0, 0},
     {"host-timeout", required_argument, 0, 0},
-    {"scan_delay", required_argument, 0, 0},
     {"scan-delay", required_argument, 0, 0},
-    {"max_scan_delay", required_argument, 0, 0},
     {"max-scan-delay", required_argument, 0, 0},
-    {"max_retries", required_argument, 0, 0},
     {"max-retries", required_argument, 0, 0},
     {"oA", required_argument, 0, 0},
     {"oN", required_argument, 0, 0},
@@ -628,34 +613,22 @@ void parse_options(int argc, char **argv) {
     {"iL", required_argument, 0, 0},
     {"iR", required_argument, 0, 0},
     {"sI", required_argument, 0, 0},
-    {"source_port", required_argument, 0, 'g'},
     {"source-port", required_argument, 0, 'g'},
-    {"randomize_hosts", no_argument, 0, 0},
     {"randomize-hosts", no_argument, 0, 0},
-    {"nsock_engine", required_argument, 0, 0},
     {"nsock-engine", required_argument, 0, 0},
     {"proxies", required_argument, 0, 0},
     {"proxy", required_argument, 0, 0},
-    {"osscan_limit", no_argument, 0, 0}, /* skip OSScan if no open ports */
     {"osscan-limit", no_argument, 0, 0}, /* skip OSScan if no open ports */
-    {"osscan_guess", no_argument, 0, 0}, /* More guessing flexibility */
     {"osscan-guess", no_argument, 0, 0}, /* More guessing flexibility */
     {"fuzzy", no_argument, 0, 0}, /* Alias for osscan_guess */
-    {"packet_trace", no_argument, 0, 0}, /* Display all packets sent/rcv */
     {"packet-trace", no_argument, 0, 0}, /* Display all packets sent/rcv */
-    {"version_trace", no_argument, 0, 0}, /* Display -sV related activity */
     {"version-trace", no_argument, 0, 0}, /* Display -sV related activity */
     {"data", required_argument, 0, 0},
-    {"data_string", required_argument, 0, 0},
     {"data-string", required_argument, 0, 0},
-    {"data_length", required_argument, 0, 0},
     {"data-length", required_argument, 0, 0},
-    {"send_eth", no_argument, 0, 0},
     {"send-eth", no_argument, 0, 0},
-    {"send_ip", no_argument, 0, 0},
     {"send-ip", no_argument, 0, 0},
     {"stylesheet", required_argument, 0, 0},
-    {"no_stylesheet", no_argument, 0, 0},
     {"no-stylesheet", no_argument, 0, 0},
     {"webxml", no_argument, 0, 0},
     {"rH", no_argument, 0, 0},
@@ -664,10 +637,8 @@ void parse_options(int argc, char **argv) {
     {"privileged", no_argument, 0, 0},
     {"unprivileged", no_argument, 0, 0},
     {"mtu", required_argument, 0, 0},
-    {"append_output", no_argument, 0, 0},
     {"append-output", no_argument, 0, 0},
     {"noninteractive", no_argument, 0, 0},
-    {"spoof_mac", required_argument, 0, 0},
     {"spoof-mac", required_argument, 0, 0},
     {"thc", no_argument, 0, 0},
     {"badsum", no_argument, 0, 0},
@@ -675,54 +646,32 @@ void parse_options(int argc, char **argv) {
     {"traceroute", no_argument, 0, 0},
     {"reason", no_argument, 0, 0},
     {"allports", no_argument, 0, 0},
-    {"version_intensity", required_argument, 0, 0},
     {"version-intensity", required_argument, 0, 0},
-    {"version_light", no_argument, 0, 0},
     {"version-light", no_argument, 0, 0},
-    {"version_all", no_argument, 0, 0},
     {"version-all", no_argument, 0, 0},
-    {"system_dns", no_argument, 0, 0},
     {"system-dns", no_argument, 0, 0},
     {"resolve-all", no_argument, 0, 0},
-    {"log_errors", no_argument, 0, 0},
     {"log-errors", no_argument, 0, 0},
-    {"deprecated_xml_osclass", no_argument, 0, 0},
     {"deprecated-xml-osclass", no_argument, 0, 0},
-    {"dns_servers", required_argument, 0, 0},
     {"dns-servers", required_argument, 0, 0},
     {"port-ratio", required_argument, 0, 0},
-    {"port_ratio", required_argument, 0, 0},
     {"exclude-ports", required_argument, 0, 0},
-    {"exclude_ports", required_argument, 0, 0},
     {"top-ports", required_argument, 0, 0},
-    {"top_ports", required_argument, 0, 0},
 #ifndef NOLUA
     {"script", required_argument, 0, 0},
     {"script-trace", no_argument, 0, 0},
-    {"script_trace", no_argument, 0, 0},
     {"script-updatedb", no_argument, 0, 0},
-    {"script_updatedb", no_argument, 0, 0},
     {"script-args", required_argument, 0, 0},
-    {"script_args", required_argument, 0, 0},
     {"script-args-file", required_argument, 0, 0},
-    {"script_args_file", required_argument, 0, 0},
     {"script-help", required_argument, 0, 0},
-    {"script_help", required_argument, 0, 0},
     {"script-timeout", required_argument, 0, 0},
-    {"script_timeout", required_argument, 0, 0},
 #endif
-    {"ip_options", required_argument, 0, 0},
     {"ip-options", required_argument, 0, 0},
-    {"min_rate", required_argument, 0, 0},
     {"min-rate", required_argument, 0, 0},
-    {"max_rate", required_argument, 0, 0},
     {"max-rate", required_argument, 0, 0},
     {"adler32", no_argument, 0, 0},
-    {"stats_every", required_argument, 0, 0},
     {"stats-every", required_argument, 0, 0},
-    {"disable_arp_ping", no_argument, 0, 0},
     {"disable-arp-ping", no_argument, 0, 0},
-    {"route_dst", required_argument, 0, 0},
     {"route-dst", required_argument, 0, 0},
     {"resume", required_argument, 0, 0},
     {0, 0, 0, 0}
